GNOME Bugzilla – Bug 700003
[PATCH] Include string.h in soup-request-file.c
Last modified: 2013-05-09 13:15:35 UTC
Created attachment 243684 [details] [review] Proposed patch Resolves implicit declaration failures of functions like 'strchr' == CC soup-request-file.lo ../../libsoup/soup-request-file.c: In function 'windowsify_file_uri_path': ../../libsoup/soup-request-file.c:98:2: error: implicit declaration of function 'strchr' [-Werror=implicit-function-declaration] while ((slash = strchr (p, '/')) != NULL) { ^ ../../libsoup/soup-request-file.c:98:18: warning: incompatible implicit declaration of built-in function 'strchr' [enabled by default] while ((slash = strchr (p, '/')) != NULL) { ^ ../../libsoup/soup-request-file.c:112:4: error: implicit declaration of function 'memmove' [-Werror=implicit-function-declaration] memmove (path, path + 1, strlen (path)); ^ ../../libsoup/soup-request-file.c:112:4: warning: incompatible implicit declaration of built-in function 'memmove' [enabled by default] ../../libsoup/soup-request-file.c:112:4: error: implicit declaration of function 'strlen' [-Werror=implicit-function-declaration] ../../libsoup/soup-request-file.c:112:29: warning: incompatible implicit declaration of built-in function 'strlen' [enabled by default] memmove (path, path + 1, strlen (path)); ^ cc1: some warnings being treated as errors make[3]: *** [soup-request-file.lo] Error 1
thanks