Include string.h in soup-request-file.c

Resolves implicit declaration failures of functions like 'strchr'

https://bugzilla.gnome.org/show_bug.cgi?id=700003